template for record add

--- a/records/templates/records/records_list.html
+++ b/records/templates/records/records_list.html
@@ -8,7 +8,7 @@
 {% block title %}{% trans 'Records List' %}{% endblock title %}
 
 {% block content %}
-{#  <a href="{% url "records_add" %}" class="btn btn-primary">{% trans "Add Student" %}</a>#}
+  <a href="{% url "record_add" %}" class="btn btn-primary">{% trans "Add Record" %}</a>
 
 
 <p>{% trans "Welcome to Records List" %}</p>
