--- a/records/templates/base.html
+++ b/records/templates/base.html
@@ -44,7 +44,7 @@
           <div class="collapse navbar-collapse" id="sub-header">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">{% trans 'Home' %} <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'home' %}">{% trans 'Home' %} <span class="sr-only">(current)</span></a>
               </li>
             </ul>
 
