forms and views for records

--- a/records/templates/base.html
+++ b/records/templates/base.html
@@ -9,7 +9,7 @@
 
     <title>{% trans "Hearttone" %} - {% block meta_title %}{% endblock meta_title %}</title>
 
-    <meta name="description" value="{% trans "Hearttone" %}">
+    <meta name="description" content="{% trans "Hearttone" %}">
 
     <!-- Include Styles -->
     <!-- Bootstrap CSS -->
@@ -89,13 +89,12 @@
       <!-- Start Footer -->
       <footer class="bd-footer text-muted" id="footer" role="contentinfo">
             <hr/>
-          <div class="row">
+          <div class="">
             <div class="copyright col-12">
 
               &copy; 2017&mdash;2017 <a href="#" rel="author"></a>.
             </div>
           </div>
-        </div>
       </footer>
 
       <!-- End Footer -->
