some style changes

--- a/records/templates/records/templates_add_edit.html
+++ b/records/templates/records/templates_add_edit.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <form action="{{ form.form_action }}" method="{{ form.form_method }}"
-      class="form-horizontal" novalidate enctype="multipart/form-data">
+      novalidate enctype="multipart/form-data">
 
     {% crispy form %}
 
