--- a/records/templates/records/records_list.html
+++ b/records/templates/records/records_list.html
@@ -10,9 +10,9 @@
 {% block content %}
   <a href="{% url "record_add" %}" class="btn btn-primary">{% trans "Add Record" %}</a>
 
-<table class="table">
+<table class="table table-striped">
   {% with order_by=request.GET.order_by reverse=request.GET.reverse %}
-  <thead>
+  <thead class="">
     <tr>
       <th>#</th>
       <th>{% trans "History" %}</th>
@@ -32,7 +32,7 @@
       </td>
       <td><a href="{% url "record_edit" record.id %}" >{{ record.history_number }}</a></td>
       <td>{{ record.date_time }}</td>
-      <td>{{ record.gender }}</td>
+      <td>{% if record.gender %}{{ record.get_gender_display }}{% endif %}</td>
       <td>{{ record.weight }}</td>
       <td>{{ record.length }}</td>
       <td>{{ record.path_to_file }}</td>
